--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <section class="section">
           <div class="container">
-            <h2 class="visually-hidden">Our benefits</h2>
+            <h2 class="benefits-title visually-hidden">Our benefits</h2>
             <ul class="benefits-list">
               <li class="benefits-item">
                 <h3 class="benefits-subtitle card-subtitle">Strategy</h3>
